zluda_bindgen/build/cublasLt_internal.h

    undefined4 cublasLtShutdownCtx(long param_1);
    int cublasLtCtxInit(long param_1);
    undefined8 cublasLtHeuristicLutSerializeEntry(undefined8 param_1,undefined8 *param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 *param_12,undefined8 *param_13,ulong param_14,undefined8 *param_15);
    undefined8 cublasLtLegacyGemmACC(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmBII(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmBSS(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmCCC(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    void cublasLtLegacyGemmUtilizationCCC(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined4 param_10,undefined4 param_11,undefined8 param_12,undefined8 param_13);
    undefined8 cublasLtLegacyGemmDDD(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    void cublasLtLegacyGemmUtilizationDDD(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined4 param_10,undefined4 param_11,undefined8 param_12,undefined8 param_13);
    undefined8 cublasLtLegacyGemmHHH(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmHSS(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);
    undefined8 cublasLtLegacyGemmHSH(undefined8 param_1,undefined8 param_2,int *param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined4 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined4 param_13,undefined4 param_14,undefined8 param_15,undefined4 param_16,undefined4 param_17,undefined8 param_18,undefined4 param_19,undefined4 param_20,undefined4 param_21,undefined4 param_22,undefined4 param_23,undefined1 param_24,undefined8 param_25,undefined8 param_26,undefined8 param_27);