cuda_base/src/cublaslt_internal.rs

/* automatically generated by rust-bindgen 0.70.1 */

extern "system" {
    pub fn cublasLtShutdownCtx(param_1: ::core::ffi::c_long) -> ::core::ffi::c_uint;
}
extern "system" {
    pub fn cublasLtCtxInit(param_1: ::core::ffi::c_long) -> ::core::ffi::c_int;
}
extern "system" {
    pub fn cublasLtHeuristicLutSerializeEntry(
        param_1: ::core::ffi::c_ulonglong,
        param_2: *mut ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: *mut ::core::ffi::c_ulonglong,
        param_13: *mut ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: *mut ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmACC(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmBII(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmBSS(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmCCC(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmUtilizationCCC(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_uint,
        param_11: ::core::ffi::c_uint,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
    );
}
extern "system" {
    pub fn cublasLtLegacyGemmDDD(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmUtilizationDDD(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_uint,
        param_11: ::core::ffi::c_uint,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
    );
}
extern "system" {
    pub fn cublasLtLegacyGemmHHH(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmHSS(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    pub fn cublasLtLegacyGemmHSH(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: *mut ::core::ffi::c_int,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_uint,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_uint,
        param_14: ::core::ffi::c_uint,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_uint,
        param_17: ::core::ffi::c_uint,
        param_18: ::core::ffi::c_ulonglong,
        param_19: ::core::ffi::c_uint,
        param_20: ::core::ffi::c_uint,
        param_21: ::core::ffi::c_uint,
        param_22: ::core::ffi::c_uint,
        param_23: ::core::ffi::c_uint,
        param_24: ::core::ffi::c_uchar,
        param_25: ::core::ffi::c_ulonglong,
        param_26: ::core::ffi::c_ulonglong,
        param_27: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_ulonglong;
}
